--- a/src/components/image/style/image.mobile.css
+++ b/src/components/image/style/image.mobile.css
@@ -1,6 +1,7 @@
 .image-container {
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
+    background-color: white;
 }
 
 .image-container img {
