--- a/src/components/item-title/style/item-title.mobile.css
+++ b/src/components/item-title/style/item-title.mobile.css
@@ -1,6 +1,6 @@
 .item-title {
     border-bottom: 1px solid lightgray;
-    font-size: 22px;
-    font-weight: 600;
-    padding: 5px 15px;
+    font-size: 20px; 
+    margin: 0 0 10px 0;
+    padding: 5px;
 }
