--- a/src/components/seller-details/style/seller-details.mobile.css
+++ b/src/components/seller-details/style/seller-details.mobile.css
@@ -1,6 +1,10 @@
+h5 {
+    margin: 0 0 3px 0;
+    font-size: 16px;
+}
+
 .seller-details {
-    border-bottom: 1px solid lightgray;
-    font-size: 22px;
-    font-weight: 600;
-    padding: 5px 15px;
+    line-height: 1.3;
+    border: 1px solid lightgray;
+    padding: 15px;
 }
