--- a/src/components/app-layout/desktop/app-layout.css
+++ b/src/components/app-layout/desktop/app-layout.css
@@ -4,7 +4,7 @@
 
 .app-layout {
     max-width: 1250px;
-    min-width: 768px; /* down to tablet size */
+    min-width: 768px; /* down to ipad size */
     margin: 0 auto;
 }
 
@@ -24,4 +24,11 @@
 
 .flex1 {
     flex: 1;
+}
+
+.item-details-container {
+    flex: 1;
+    background-color: #e2e2e2;
+    margin-right: 15px;
+    padding: 15px;
 }
