--- a/src/components/item-details/style/item-details.css
+++ b/src/components/item-details/style/item-details.css
@@ -1,6 +1,6 @@
 .item-details {
-    flex: 1;
     background-color: #e2e2e2;
     margin-right: 15px;
-    padding: 15px;
+    flex: 1;
+    min-width: 100px;
 }
