--- a/src/components/seller-details/style/seller-details.css
+++ b/src/components/seller-details/style/seller-details.css
@@ -4,7 +4,9 @@ h5 {
 
 .seller-details {
     line-height: 1.3;
+    background-color: white;
     border: 1px solid lightgray;
     padding: 15px;
     width: 200px;
+    height: 200px;
 }
