add color changing component and also favicon

--- a/src/components/app-layout/desktop/app-layout.css
+++ b/src/components/app-layout/desktop/app-layout.css
@@ -44,7 +44,7 @@
 .wireframe {
     border: 1px solid #eeeeee;
     height: 250px;
-    margin-top: 20px;
+    margin: 10px 0;
     /* Diagonal stripes */
     background: repeating-linear-gradient(45deg, #eeeeee, white 20px, lightgray 5px);
 }
