--- a/src/components/seller-details/style/seller-details.mobile.css
+++ b/src/components/seller-details/style/seller-details.mobile.css
@@ -5,6 +5,7 @@ h5 {
 
 .seller-details {
     line-height: 1.3;
-    border: 1px solid lightgray;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     padding: 15px;
 }
