--- a/src/components/color-changing/style/color-changing.android.css
+++ b/src/components/color-changing/style/color-changing.android.css
@@ -1,9 +1,9 @@
 .color-changing {
-    color: green;
+    color: red;
 }
 
 .color-text:after {
-    content: 'green';
+    content: 'red';
 }
 
 .device-type:after {
