--- a/src/components/color-changing/color-changing.css
+++ b/src/components/color-changing/color-changing.css
@@ -1,6 +1,5 @@
 .color-changing {
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border: 1px solid lightgray;
     margin-top: 10px;
     padding: 15px;
     width: 100%;
