--- a/src/components/seller-details/style/seller-details.mobile.css
+++ b/src/components/seller-details/style/seller-details.mobile.css
@@ -4,6 +4,7 @@ h4 {
 }
 
 .seller-details {
+    background-color: white;
     line-height: 1.3;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
