--- a/src/components/color-changing/color-changing.scss
+++ b/src/components/color-changing/color-changing.scss
@@ -1,5 +1,7 @@
+@import 'src/style/variables.scss';
+
 .color-changing {
-    border: 1px solid lightgray;
+    border: $lineWidth $lineStyle $lineColor;
     margin-top: 10px;
     padding: 15px;
     width: 100%;
