--- a/src/components/header/mobile/header.scss
+++ b/src/components/header/mobile/header.scss
@@ -1,16 +1,30 @@
-.ebay-logo img {
-    width: 77px;
-    margin: 5px 0 0 5px;
-}
-
 .header {
     background-color: white;
     display: flex;
-}
 
-.icon-container {
-    margin-left: auto;
-    margin-right: 5px;
+    .ebay-logo img {
+        width: 77px;
+        margin: 5px 0 0 5px;
+    }
+
+    .icon-container {
+        margin-left: auto;
+        margin-right: 5px;
+    }
+
+    .icon-search {
+        background-position: -31px 0;
+    }
+
+    .icon-profile {
+        background-position: -115px 0;
+    }
+
+    .icon-shopcart {
+        background-position: -986px 0;
+        width: 27px;
+        margin-left: 3px;
+    }
 }
 
 .icon-button {
@@ -23,20 +37,6 @@
     display: inline-block;
 }
 
-.icon-search {
-    background-position: -31px 0;
-}
-
-.icon-profile {
-    background-position: -115px 0;
-}
-
-.icon-shopcart {
-    background-position: -986px 0;
-    width: 27px;
-    margin-left: 3px;
-}
-
 .hide {
     display: none;
 }
@@ -47,49 +47,37 @@
     height: 100%;
     background: white;
     top: 0;
-}
 
-input {
-    border: 1px solid #aaa;
-    line-height: 18px;
-    height: 40px;
-    padding: 0 10px;
-    margin: 10px 0 0 10px;
-    font-size: 16px;
-    flex: 1;
-}
+    button,
+    .cancel,
+    input, 
+    .search-row, {
+        display: flex;
+    }
 
-button {
-    background-color: #0654ba;
-    border: none;
-    color: #ffffff;
-    font-size: 14px;
-    height: 40px;
-    padding: 0 14px 0 10px;
-}
+    button {
+        padding: 0 14px 0 10px;
+        margin: 10px 10px 0 0;
+    }
 
-.search-overlay button {
-    margin: 10px 10px 0 0;
-}
+    .cancel {
+        margin: 20px 12px 0 0;
+        font-size: 15px;
+        font-weight: 500;
+        text-decoration: none;
+    }
 
-.icon-search-white {
-    background-position: -1748px -1px;
-    background-size: auto 24px;
-    width: 26px;
-    height: 24px;
-    margin: 0;
-}
+    .icon-search-white {
+        background-position: -1748px -1px;
+        background-size: auto 24px;
+        width: 26px;
+        height: 24px;
+        margin: 0;
+    }
 
-.cancel {
-    margin: 20px 12px 0 0;
-    font-size: 15px;
-    font-weight: 500;
-    text-decoration: none;
-}
-
-.search-row,
-input, 
-button,
-.cancel {
-    display: flex;
+    input {
+        padding: 0 10px;
+        margin: 10px 0 0 10px;
+        flex: 1;
+    }
 }
