--- a/src/components/seller-details/style/seller-details.mobile.scss
+++ b/src/components/seller-details/style/seller-details.mobile.scss
@@ -1,3 +1,5 @@
+@import 'src/style/variables.scss';
+
 h4 {
     margin: 0 0 3px 0;
     font-size: 16px;
@@ -6,7 +8,7 @@ h4 {
 .seller-details {
     background-color: white;
     line-height: 1.3;
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border-top: $lineWidth $lineStyle $lineColor;
+    border-bottom: $lineWidth $lineStyle $lineColor;
     padding: 15px;
 }
