--- a/src/components/seller-details/style/seller-details.scss
+++ b/src/components/seller-details/style/seller-details.scss
@@ -1,3 +1,5 @@
+@import 'src/style/variables.scss';
+
 h4 {
     margin: 0 0 3px 0;
 }
@@ -6,7 +8,7 @@ h4 {
     font-size: 14px;
     line-height: 1.3;
     background-color: white;
-    border: 1px solid lightgray;
+    border: $lineWidth $lineStyle $lineColor;
     padding: 15px;
     width: 200px;
     height: 200px;
