--- a/src/components/image/style/image.mobile.scss
+++ b/src/components/image/style/image.mobile.scss
@@ -6,6 +6,7 @@
     background-color: white;
 }
 
-.image-container img {
+.item-image {
     width: 100%;
+    content: url('http://i.ebayimg.com/00/s/NzY4WDgyOQ==/z/9aYAAOSwoydWsbPg/$_1.JPG');
 }
