--- a/src/components/image/style/image.scss
+++ b/src/components/image/style/image.scss
@@ -5,7 +5,8 @@
     background-color: white;
 }
 
-.image-container img {
+.item-image {
     width: 100%;
+    content: url('http://i.ebayimg.com/images/g/9aYAAOSwoydWsbPg/s-l1600.jpg');
 }
 
