--- a/src/components/image/style/image.mobile.cornify.scss
+++ b/src/components/image/style/image.mobile.cornify.scss
@@ -1,9 +1,10 @@
-@import 'src/style/variables.scss';
+@import 'src/style/variables.cornify.scss';
 
 .image-container {
     border-top: $lineWidth $lineStyle $lineColor;
     border-bottom: $lineWidth $lineStyle $lineColor;
     background-color: white;
+    position: relative;
 }
 
 .item-image {
@@ -12,5 +13,10 @@
 }
 
 .sunglasses {
-    display: none;
+    position: absolute;
+    top: 46%;
+    left: 12%;
+    width: 33%;
+    transform: rotate(-7deg);
+    content: url('https://cdn.pixabay.com/photo/2014/04/02/10/56/sunglasses-304998__340.png');
 }
