fix overlay in branding branch

--- a/src/components/header/mobile/header.scss
+++ b/src/components/header/mobile/header.scss
@@ -47,6 +47,7 @@
     height: 100%;
     background: white;
     top: 0;
+    z-index: 1;
 
     button,
     .cancel,
@@ -58,6 +59,7 @@
     button {
         padding: 0 14px 0 10px;
         margin: 10px 10px 0 0;
+        width: 50px;
     }
 
     .cancel {
